--- a/src/main/java/Konverter.form
+++ b/src/main/java/Konverter.form
@@ -76,6 +76,11 @@
                   </Group>
                   <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -88,7 +93,9 @@
                       <Component id="celcius_label" pref="112" max="32767" attributes="0"/>
                       <Component id="input_celcius" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="59" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="25" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="convert_button" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
                       <Component id="fahrenheit_label" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
@@ -155,6 +162,11 @@
                 <LineBorder/>
               </Border>
             </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="selamat pagi dunia tipu tipu"/>
           </Properties>
         </Component>
       </SubComponents>
